# demo-great-expectations

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: dataset.csv
gx/: great_expectations.yml
gx/checkpoints/: checkpoint.json
gx/expectations/: .ge_store_backend_id  expectation.json
gx/validation_definitions/: validation_definition.json
src/: data_quality.py
